# Attention-Is-All-You-Need

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/attention_is_all_you_need/: __init__.py  add_and_norm.py  decoder.py  encoder.py  feed_forward.py  input_embedding.py  linear.py  masked_multihead_attention.py  multihead_attention.py  output_embedding.py  positional_encoding.py  scaled_dot_product_attention.py  softmax.py  tokenizer.py  transformer.py  vocab.json
src/attention_is_all_you_need/utils/: __init__.py  tokenizer.py
